# api/aibox_device.go
@@ -110,6 +110,7 @@ func batchUpsertAibox_deviceHandler(w http.ResponseWriter, r *http.Request) {
 // @Param device_time query string false "device_time"
 // @Param latest_heart_beat_time query string false "latest_heart_beat_time"
 // @Param status query string false "status"
+// @Param upgrade_tasks query string false "upgrade_tasks"
 // @Produce  json
 // @Success 200 {object} common.Response{data=common.PageGeneric[model.Aibox_device]} "objects array"
 // @Failure 500 {object} common.Response ""
@@ -142,6 +143,7 @@ func Aibox_devicePageListHandler(w http.ResponseWriter, r *http.Request) {
 // @Param device_time query string false "device_time"
 // @Param latest_heart_beat_time query string false "latest_heart_beat_time"
 // @Param status query string false "status"
+// @Param upgrade_tasks query string false "upgrade_tasks"
 // @Produce  json
 // @Success 200 {object} common.Response{data=[]model.Aibox_device} "objects array"
 // @Failure 500 {object} common.Response ""
