# api/aibox_device_info.go
@@ -28,8 +28,10 @@ func InitAibox_device_infoRoute(r chi.Router) {
 // @Param name query string false "name"
 // @Param ip query string false "ip"
 // @Param build_time_str query string false "build_time_str"
+// @Param device_time query string false "device_time"
 // @Param latest_heart_beat_time query string false "latest_heart_beat_time"
 // @Param status query string false "status"
+// @Param upgrade_tasks query string false "upgrade_tasks"
 // @Param status_name query string false "status_name"
 // @Param active_event_count query string false "active_event_count"
 // @Param critical_event_count query string false "critical_event_count"
@@ -61,8 +63,10 @@ func Aibox_device_infoPageListHandler(w http.ResponseWriter, r *http.Request) {
 // @Param name query string false "name"
 // @Param ip query string false "ip"
 // @Param build_time_str query string false "build_time_str"
+// @Param device_time query string false "device_time"
 // @Param latest_heart_beat_time query string false "latest_heart_beat_time"
 // @Param status query string false "status"
+// @Param upgrade_tasks query string false "upgrade_tasks"
 // @Param status_name query string false "status_name"
 // @Param active_event_count query string false "active_event_count"
 // @Param critical_event_count query string false "critical_event_count"
