# docs/swagger.json
@@ -247,6 +247,12 @@
                         "description": "status",
                         "name": "status",
                         "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "upgrade_tasks",
+                        "name": "upgrade_tasks",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -379,6 +385,12 @@
                     },
                     {
                         "type": "string",
+                        "description": "device_time",
+                        "name": "device_time",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
                         "description": "latest_heart_beat_time",
                         "name": "latest_heart_beat_time",
                         "in": "query"
@@ -387,6 +399,12 @@
                         "type": "string",
                         "description": "status",
                         "name": "status",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "upgrade_tasks",
+                        "name": "upgrade_tasks",
                         "in": "query"
                     },
                     {
@@ -514,6 +532,12 @@
                     },
                     {
                         "type": "string",
+                        "description": "device_time",
+                        "name": "device_time",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
                         "description": "latest_heart_beat_time",
                         "name": "latest_heart_beat_time",
                         "in": "query"
@@ -522,6 +546,12 @@
                         "type": "string",
                         "description": "status",
                         "name": "status",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "upgrade_tasks",
+                        "name": "upgrade_tasks",
                         "in": "query"
                     },
                     {
@@ -771,6 +801,12 @@
                         "type": "string",
                         "description": "status",
                         "name": "status",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "upgrade_tasks",
+                        "name": "upgrade_tasks",
                         "in": "query"
                     }
                 ],
@@ -2679,6 +2715,10 @@
                 "updated_time": {
                     "description": "updated_time",
                     "type": "string"
+                },
+                "upgrade_tasks": {
+                    "description": "升级任务",
+                    "type": "string"
                 }
             }
         },
@@ -2696,6 +2736,10 @@
                 "critical_event_count": {
                     "description": "紧急事件数",
                     "type": "integer"
+                },
+                "device_time": {
+                    "description": "设备时间",
+                    "type": "string"
                 },
                 "id": {
                     "description": "设备ID",
@@ -2727,6 +2771,10 @@
                 },
                 "status_name": {
                     "description": "设备状态名称",
+                    "type": "string"
+                },
+                "upgrade_tasks": {
+                    "description": "升级任务",
                     "type": "string"
                 },
                 "warning_event_count": {
